# ai-stack

./: .gitignore  CHANGELOG.md  JOURNAL.md  Makefile  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml
backups/: brain_2025-12-22_15-09-59.sql  brain_2025-12-22_15-18-28.sql  brain_2025-12-22_17-20-52.sql  brain_2025-12-23_10-01-49.sql
dashboard/: crypto-detail.html  crypto.html  index.html  job-hunter.html  portfolio.html  stocks.html  style.css
docs/: crypto-crontab.txt  crypto-env-example.txt  crypto-module.md
job-hunter/: Dockerfile  main.py  requirements.txt
n8n-custom/: Dockerfile
python-runner/: Dockerfile  README.md  app.py  pyproject.toml
python-runner/core/: brain.py  classifier.py  db.py  decisions.py  llm.py  models.py  notifier.py  prioritizer.py  processor.py  rag.py  reviewer.py  vector.py
python-runner/crypto/: __init__.py  api_clients.py  db.py  models.py  portfolio_db.py  portfolio_models.py  routes.py  scoring.py  watchlist.py  watchlist_models.py
python-runner/migrations/: 001_create_crypto_schema.sql  001_init.sql  002_add_tracking_type.sql  003_add_positions.sql  004_create_stocks_schema.sql
python-runner/scripts/: collect_top50.py  debug_qdrant.py  reset_qdrant.py  run_migrations.py  seed_crypto_watchlist.py  test_classification_e2e.py  test_deletion.py  test_llm.py  test_notify.py  test_notify_levels.py  test_rag_e2e.py  test_smart_router.py  test_vector.py
python-runner/stocks/: db.py  provider.py  routes.py
scripts/: backup_brain.sh  collect_crypto_metrics.py  dev.sh  prod.sh  restore_brain.sh  (+2 more)
(+17 files in other folders)
