[tool.poetry]
name = "brain-runner"
version = "0.1.0"
description = "Python runner for AI Stack"
authors = ["AI Assistant <ai@example.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
psycopg2-binary = "^2.9.10"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
